chore: add links to hptc page

--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -32,7 +32,8 @@ High Performance TiDB Challenge
           High Performance TiDB Challenge
         </div>
         <div class="buttons">
-          <a href="">
+          <a href="https://github.com/pingcap/community/blob/master/challenge-programs/high-performance-tidb-challenge-cn.md"
+            target="_blank">
             <button class="button white-bg">
               竞赛细则
             </button>
@@ -46,7 +47,7 @@ High Performance TiDB Challenge
         </div>
       </div>
       <div class="hero-bg">
-        <img src="/images/high-performance-tidb/hero-bg.svg" />
+        <img src="https://download.pingcap.com/images/community/high-performance-tidb/hero-bg.svg" />
       </div>
     </div>
   </div>
@@ -86,21 +87,22 @@ High Performance TiDB Challenge
           性能竞赛题目分两种类型，分别为围绕固定场景的性能优化和解决高难度性能优化 issue。每个小组只能选择一个题目参加比赛，目前可选题目如下
         </div>
 
-        <div class="scence-overview">
+        <div class="scene-overview">
           <div class="card-title">固定场景进行性能优化题概览</div>
-          <div class="scence-bg">
-            <img class="img-pc" src="/images/high-performance-tidb/scence-overview.svg" />
-            <img class="img-mobile" src="/images/high-performance-tidb/scence-overview-mobile.svg" />
+          <div class="scene-bg">
+            <img class="img-pc" src="https://download.pingcap.com/images/community/high-performance-tidb/scene-overview.svg" />
+            <img class="img-mobile" src="https://download.pingcap.com/images/community/high-performance-tidb/scene-overview-mobile.svg" />
           </div>
         </div>
-        <div class="scence-overview">
+        <div class="scene-overview">
           <div class="card-title">性能优化高难度 issue 概览</div>
-          <div class="scence-bg">
-            <img class="img-pc" src="/images/high-performance-tidb/issue-overview.svg" />
-            <img class="img-mobile" src="/images/high-performance-tidb/issue-overview-mobile.svg" />
+          <div class="scene-bg">
+            <img class="img-pc" src="https://download.pingcap.com/images/community/high-performance-tidb/issue-overview.svg" />
+            <img class="img-mobile" src="https://download.pingcap.com/images/community/high-performance-tidb/issue-overview-mobile.svg" />
           </div>
         </div>
-        <a href="" target="_blank">
+        <a href="https://github.com/pingcap/community/blob/master/challenge-programs/high-performance-tidb-challenge-cn.md#%E5%8F%82%E8%B5%9B%E6%B5%81%E7%A8%8B"
+          target="_blank">
           <button class="button white-bg">
             更多题目
           </button>
@@ -119,15 +121,19 @@ High Performance TiDB Challenge
       </div>
       <div class="steps">
         <div class="step step1-bg img-pc">
-          <img src="/images/high-performance-tidb/step1-bg.svg" />
+          <img src="https://download.pingcap.com/images/community/high-performance-tidb/step1-bg.svg" />
         </div>
         <div class="step">
           <div class="label">Step 1</div>
           <div class="step-title">报名组队 （即日起至 2020.11.15）</div>
-          <div class="detail">请仔细阅读「参赛须知」（github链接）并填写下方表单进行报名。一旦表单提交就不可以修改哦～</div>
+          <div class="detail">请仔细阅读
+            <a href="https://github.com/pingcap/community/blob/master/challenge-programs/high-performance-tidb-challenge-cn.md#%E6%B4%BB%E5%8A%A8%E8%A7%84%E5%88%99"
+              target="_blank">「参赛须知」</a>
+            并填写下方表单进行报名。一旦表单提交就不可以修改哦～
+          </div>
           <a target="_blank" id="register-btn-step" href="https://forms.pingcap.com/f/high-performance-challenge-cn"
-            onclick="trackViews('step', 'hptc_form')"></a>
-          <button class="button">报名组队</button>
+            onclick="trackViews('step', 'hptc_form')">
+            <button class="button">报名组队</button>
           </a>
         </div>
         <div class="step">
@@ -135,7 +141,10 @@ High Performance TiDB Challenge
           <div class="step-title">实现任务 （ 2020.09.17-2020.11.15）</div>
           <div class="detail">Workload 优化：在小组顾问的指导下，大家围绕本小组场景主题，进行性能瓶颈判断及针对性的优化。对优化点提出 issue 并解决即可获得相应分数。<br />
             固定性能优化相关大 issue：在小组顾问的指导下解决 issue 后获得相应的分数。</div>
-          <button class="button">竞赛细则</button>
+          <a
+            href="https://github.com/pingcap/community/blob/master/challenge-programs/high-performance-tidb-challenge-cn.md">
+            <button class="button">竞赛细则</button>
+          </a>
         </div>
         <div class="step">
           <div class="label">Step 3</div>
@@ -164,7 +173,7 @@ High Performance TiDB Challenge
           </div>
         </div>
         <div class="step step4-bg">
-          <img src="/images/high-performance-tidb/step4-bg.svg" />
+          <img src="https://download.pingcap.com/images/community/high-performance-tidb/step4-bg.svg" />
         </div>
       </div>
     </div>
@@ -241,7 +250,7 @@ High Performance TiDB Challenge
           <a href="https://space.bilibili.com/86485707/channel/detail?cid=145009" target="_blank">
             <div class="detail">
               <div class="thumb">
-                <img src="/images/high-performance-tidb/video-course.svg" />
+                <img src="https://download.pingcap.com/images/community/high-performance-tidb/video-course.svg" />
               </div>
               <div class="title">High Performance TiDB 专项视频课程</div>
               <div class="desc">由 TiDB 核心研发工程师以及 TiDB 社区 Committer 和 Maintainer 联合打造的 High Performance TiDB
@@ -253,11 +262,11 @@ High Performance TiDB Challenge
 
         <div class="learning-card">
           <div class="header"></div>
-          <a href="https://docs.google.com/document/d/1nh0mKhMTZ-eFdWrrCrwpQQ1qYH8S8fLRpYZKmimU_6w/edit#"
+          <a href="https://github.com/pingcap/community/blob/master/challenge-programs/tidb-learning-materials-cn.md"
             target="_blank">
             <div class="detail">
               <div class="thumb">
-                <img src="/images/high-performance-tidb/doc-package.svg" />
+                <img src="https://download.pingcap.com/images/community/high-performance-tidb/doc-package.svg" />
               </div>
               <div class="title">专项学习文档包</div>
               <div class="desc">参赛必读。提供了一些常用的调优工具和 workload 相关知识背景,帮助参赛选手更了解 TiDB 性能测试场景。</div>
@@ -294,7 +303,7 @@ High Performance TiDB Challenge
   <div class="attention-body">
     <div class="container">
       <div class="attention-bg img-mobile">
-        <img src="/images/high-performance-tidb/entry-notice.svg" />
+        <img src="https://download.pingcap.com/images/community/high-performance-tidb/entry-notice.svg" />
       </div>
       <div class="content">
         <div class="title-wrapper">
@@ -424,12 +433,12 @@ High Performance TiDB Challenge
       <div class="cards">
         <div class="usability">
           <a href="/community-cn/tidb-usability-challenge/">
-            <img src="/images/high-performance-tidb/usability.svg" />
+            <img src="https://download.pingcap.com/images/community/high-performance-tidb/usability.svg" />
           </a>
         </div>
         <div class="performance">
           <a href="/community-cn/tidb-performance-challenge/">
-            <img src="/images/high-performance-tidb/performance.svg" />
+            <img src="https://download.pingcap.com/images/community/high-performance-tidb/performance.svg" />
           </a>
         </div>
       </div>
