--- a/src/less/community/high-performance-tidb-challenge.less
+++ b/src/less/community/high-performance-tidb-challenge.less
@@ -150,7 +150,7 @@ section {
     display: flex;
     flex-flow: row wrap;
     position: relative;
-    background-image: url('/images/high-performance-tidb/intro-bg.svg');
+    background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/intro-bg.svg');
     background-repeat: no-repeat;
     background-size: contain;
 
@@ -198,7 +198,7 @@ section {
             background-size: contain;
 
             &.ele-1 {
-                background-image: url('/images/high-performance-tidb/ele1.svg');
+                background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/ele1.svg');
                 left: 3rem;
                 top: 10rem;
                 width: 3rem;
@@ -206,7 +206,7 @@ section {
             }
 
             &.ele-2 {
-                background-image: url('/images/high-performance-tidb/ele2.svg');
+                background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/ele2.svg');
                 left: 3rem;
                 bottom: 10rem;
                 width: 6rem;
@@ -214,7 +214,7 @@ section {
             }
 
             &.ele-3 {
-                background-image: url('/images/high-performance-tidb/ele3.svg');
+                background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/ele3.svg');
                 right: 3rem;
                 top: 20rem;
                 width: 4rem;
@@ -237,7 +237,7 @@ section {
         color: @C5;
     }
 
-    .scence-overview {
+    .scene-overview {
         .card-title {
             margin: 4rem 0 1.5rem;
             text-align: left;
@@ -246,7 +246,7 @@ section {
             color: @C5;
         }
 
-        .scence-bg img {
+        .scene-bg img {
             width: 100%;
         }
     }
@@ -302,7 +302,7 @@ section {
                 position: absolute;
                 content: '';
                 left: 0;
-                background-image: url('/images/high-performance-tidb/step-icon.svg');
+                background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/step-icon.svg');
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
@@ -319,6 +319,10 @@ section {
         .detail {
             font-size: 16px;
             line-height: 1.7;
+
+            a {
+                color: @C3;
+            }
         }
 
         .button {
@@ -371,7 +375,7 @@ section {
                 &::before {
                     content: '';
                     position: absolute;
-                    background-image: url('/images/high-performance-tidb/grading-icon.svg');
+                    background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/grading-icon.svg');
                     background-repeat: no-repeat;
                     background-size: contain;
                     width: 20px;
@@ -404,7 +408,7 @@ section {
 
 .awards {
     .award-body {
-        background-image: url('/images/high-performance-tidb/awards-bg.svg');
+        background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/awards-bg.svg');
         background-repeat: no-repeat;
         background-size: contain;
         display: flex;
@@ -439,7 +443,7 @@ section {
                 position: absolute;
                 content: '';
                 left: 0;
-                background-image: url('/images/high-performance-tidb/step-icon.svg');
+                background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/step-icon.svg');
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
@@ -468,7 +472,7 @@ section {
 }
 
 .learning-materials {
-    background-image: url('/images/high-performance-tidb/learning-material-bg.svg');
+    background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/learning-material-bg.svg');
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -498,7 +502,7 @@ section {
             border-radius: 10px 10px 0 0;
             width: 100%;
             height: 30px;
-            background-image: url('/images/high-performance-tidb/terminal-dot.svg');
+            background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/terminal-dot.svg');
             background-repeat: no-repeat;
             background-position: 20px;
         }
@@ -551,7 +555,7 @@ section {
             border-radius: 10px 10px 0 0;
             width: 100%;
             height: 60px;
-            background-image: url('/images/high-performance-tidb/terminal-dot.svg');
+            background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/terminal-dot.svg');
             background-repeat: no-repeat;
             background-position: 20px;
 
@@ -572,7 +576,7 @@ section {
                     width: 40px;
                     height: 40px;
                     transform: translateY(-12%);
-                    background-image: url('/images/high-performance-tidb/season-score.svg');
+                    background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/season-score.svg');
                     background-repeat: no-repeat;
                     background-size: contain;
                 }
@@ -674,19 +678,19 @@ section {
     }
 
     .medal1 {
-        background-image: url(/images/high-performance-tidb/medal1.svg);
+        background-image: url(https://download.pingcap.com/images/community/high-performance-tidb/medal1.svg);
     }
 
     .medal2 {
-        background-image: url(/images/high-performance-tidb/medal2.svg);
+        background-image: url(https://download.pingcap.com/images/community/high-performance-tidb/medal2.svg);
     }
 
     .medal3 {
-        background-image: url(/images/high-performance-tidb/medal3.svg);
+        background-image: url(https://download.pingcap.com/images/community/high-performance-tidb/medal3.svg);
     }
 
     .normal-rank {
-        background-image: url(/images/high-performance-tidb/normal-medal.svg);
+        background-image: url(https://download.pingcap.com/images/community/high-performance-tidb/normal-medal.svg);
     }
 }
 
@@ -694,7 +698,7 @@ section {
     display: flex;
     flex-flow: row wrap;
     position: relative;
-    background-image: url('/images/high-performance-tidb/entry-notice.svg');
+    background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/entry-notice.svg');
     background-repeat: no-repeat;
     background-size: contain;
 
@@ -731,7 +735,7 @@ section {
                     content: '';
                     position: absolute;
                     left: 1rem;
-                    background-image: url('/images/high-performance-tidb/step-icon.svg');
+                    background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/step-icon.svg');
                     background-repeat: no-repeat;
                     background-size: cover;
                     width: 36px;
@@ -839,6 +843,14 @@ section {
     }
 }
 
+@media (max-width: 1024px) {
+    .learning-materials {
+        .learning-card {
+            min-height: 600px;
+        }
+    }
+}
+
 
 @media only screen and (max-width: 768px) {
     section {
@@ -930,7 +942,7 @@ section {
     }
 
     .process {
-        background-image: url('/images/high-performance-tidb/step1-bg.svg');
+        background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/step1-bg.svg');
         background-size: 55%;
         background-repeat: no-repeat;
 
@@ -1022,7 +1034,7 @@ section {
             font-size: 1rem !important;
         }
 
-        .scence-overview {
+        .scene-overview {
             .card-title {
                 font-size: 1rem;
                 text-align: center;
