--- a/src/less/community/list.less
+++ b/src/less/community/list.less
@@ -254,7 +254,7 @@
     display: flex;
     flex-flow: row wrap;
     padding: 1rem 2rem 4rem;
-    justify-content: space-between;
+    justify-content: space-around;
 
     .activity {
       box-shadow: 0 2px 9px 0 #ddd;
