--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -149,13 +149,12 @@ High Performance TiDB Challenge
         <div class="step">
           <div class="label">Step 3</div>
           <div class="step-title">提交成果（ 2020.11.15 之前）</div>
-          <div class="detail">答辩时间为 11.21 日下午 13:00-17:00。所有参赛小组必须在 11.20 日上午 10:00 之前提交答辩 PPT。组长需在 PingCAP
-            各地办公室同步进行现场答辩（海外队伍可线上进行答辩）。</div>
+          <div class="detail">所有参赛小组需在 11.15 日之前提交竞赛成果。11.15 日之后合并的 PR 将不得分。 </div>
         </div>
         <div class="step">
           <div class="label">Step 4</div>
           <div class="step-title">现场答辩 （2020.11.21）</div>
-          <div class="detail">所有参赛小组必须在 11.21 日之前提交答辩 PPT。组长需在 PingCAP 各地办公室同步进行现场答辩（海外队伍可线上进行答辩）。</div>
+          <div class="detail">答辩时间为 11.21 日下午 13:00-17:00。所有参赛小组必须在 11.20 日上午 10:00 之前提交答辩 PPT。组长需在 PingCAP 各地办公室同步进行现场答辩（海外队伍可线上进行答辩）。</div>
           <button class="button grading-btn">评分标准</button>
           <div class="grading">
             <div class="grading-title">评分标准</div>
