chore: update content and images

--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -90,15 +90,19 @@ High Performance TiDB Challenge
         <div class="scene-overview">
           <div class="card-title">固定场景进行性能优化题概览</div>
           <div class="scene-bg">
-            <img class="img-pc" src="https://download.pingcap.com/images/community/high-performance-tidb/scene-overview.svg" />
-            <img class="img-mobile" src="https://download.pingcap.com/images/community/high-performance-tidb/scene-overview-mobile.svg" />
+            <img class="img-pc"
+              src="https://download.pingcap.com/images/community/high-performance-tidb/scene-overview.svg" />
+            <img class="img-mobile"
+              src="https://download.pingcap.com/images/community/high-performance-tidb/scene-overview-mobile.svg" />
           </div>
         </div>
         <div class="scene-overview">
           <div class="card-title">性能优化高难度 issue 概览</div>
           <div class="scene-bg">
-            <img class="img-pc" src="https://download.pingcap.com/images/community/high-performance-tidb/issue-overview.svg" />
-            <img class="img-mobile" src="https://download.pingcap.com/images/community/high-performance-tidb/issue-overview-mobile.svg" />
+            <img class="img-pc"
+              src="https://download.pingcap.com/images/community/high-performance-tidb/issue-overview.svg" />
+            <img class="img-mobile"
+              src="https://download.pingcap.com/images/community/high-performance-tidb/issue-overview-mobile.svg" />
           </div>
         </div>
         <a href="https://github.com/pingcap/community/blob/master/challenge-programs/high-performance-tidb-challenge-cn.md#%E5%8F%82%E8%B5%9B%E6%B5%81%E7%A8%8B"
@@ -154,7 +158,8 @@ High Performance TiDB Challenge
         <div class="step">
           <div class="label">Step 4</div>
           <div class="step-title">现场答辩 （2020.11.21）</div>
-          <div class="detail">答辩时间为 11.21 日下午 13:00-17:00。所有参赛小组必须在 11.20 日上午 10:00 之前提交答辩 PPT。组长需在 PingCAP 各地办公室同步进行现场答辩（海外队伍可线上进行答辩）。</div>
+          <div class="detail">答辩时间为 11.21 日下午 13:00-17:00。所有参赛小组必须在 11.20 日上午 10:00 之前提交答辩 PPT。组长需在 PingCAP
+            各地办公室同步进行现场答辩（海外队伍可线上进行答辩）。</div>
           <button class="button grading-btn">评分标准</button>
           <div class="grading">
             <div class="grading-title">评分标准</div>
@@ -313,84 +318,39 @@ High Performance TiDB Challenge
         <div class="attention-list">
           <div class="list-card">
             关于报名组队
-            <div class="detail">
-              <div class="item">
-                <p class="numb">1.</p>
-                <p class="desc">参赛选手必须以小组形式参赛，小组人数不超过五人，每一名参赛队员只能选择一个优化方向，且只能参加一个小组。</p>
-              </div>
-              <div class="item">
-                <p class="numb">2.</p>
-                <p class="desc">所有参赛的选手需在填写报名表单前完成组队，一旦提交表单则默认完成组队，不接受后期小组的调整（增加组员或换组、换题等</p>
-              </div>
-              <div class="item">
-                <p class="numb">3.</p>
-                <p class="desc">没有找到组员的参赛选手可先加入 slack channel 与其他选手沟通，完成组队后再填写报名表单。也可以个人报名参与竞赛，单人成组。</p>
-              </div>
-            </div>
           </div>
           <div class="list-card">
             关于积分
-            <div class="detail">
-              <div class="item">
-                <p class="numb">1.</p>
-                <p class="desc">组员完成非小组竞赛任务不得分。</p>
-              </div>
-              <div class="item">
-                <p class="numb">2.</p>
-                <p class="desc">小组积分为组内选手完成对应任务的分数之和</p>
-              </div>
-              <div class="item">
-                <p class="numb">3.</p>
-                <p class="desc">对于 workload 优化小组，提出对应 workload 相关性能优化的 issue 并解决会获得对应的积分；对于固定性能 issue 小组，解决小组对应 issue
-                  会获得对应积分。</p>
-              </div>
-              <div class="item">
-                <p class="numb">4.</p>
-                <p class="desc">排行榜积分并非最终小组排名，最终结果参考「评分标准」。</p>
-              </div>
-            </div>
           </div>
           <div class="list-card">
             关于顾问
-            <div class="detail">
-              <div class="item">
-                <p class="numb">1.</p>
-                <p class="desc">每个小组最多一名顾问，一位顾问最多指导一个小组。</p>
-              </div>
-              <div class="item">
-                <p class="numb">2.</p>
-                <p class="desc">固定 issue 的小组顾问由每个 issue 的 mentor 担任。</p>
-              </div>
-              <div class="item">
-                <p class="numb">3.</p>
-                <p class="desc">没有顾问的小组可以与组委会进行协调，但不保证每个小组都有顾问。</p>
-              </div>
-            </div>
           </div>
 
-          <div class="detail-mobile detail-1">
+          <div class="detail detail-js detail-1">
             <div class="item">
               <p class="numb">1.</p>
               <p class="desc">参赛选手必须以小组形式参赛，小组人数不超过五人，每一名参赛队员只能选择一个优化方向，且只能参加一个小组。</p>
             </div>
             <div class="item">
               <p class="numb">2.</p>
-              <p class="desc">所有参赛的选手需在填写报名表单前完成组队，一旦提交表单则默认完成组队，不接受后期小组的调整（增加组员或换组、换题等</p>
+              <p class="desc">所有参赛的选手需在填写报名表单前完成组队，一旦提交表单则默认完成组队，不接受后期小组的调整。（增加组员或换组、换题等）</p>
             </div>
             <div class="item">
               <p class="numb">3.</p>
-              <p class="desc">没有找到组员的参赛选手可先加入 slack channel 与其他选手沟通，完成组队后再填写报名表单。也可以个人报名参与竞赛，单人成组。</p>
+              <p class="desc">没有找到组员的参赛选手可先加入 <a
+                  href="https://slack.tidb.io/invite?team=tidb-community&channel=tidb-challenge-program&ref=officialweb"
+                  target="_blank">slack channel</a> 与其他选手沟通，完成组队后再填写报名表单。也可以个人报名参与竞赛，单人成组。</p>
             </div>
           </div>
 
-          <div class="detail-mobile detail-2">
+          <div class="detail detail-js detail-2">
             <div class="item">
               <p class="numb">1.</p>
               <p class="desc">组员完成非小组竞赛任务不得分。</p>
             </div>
             <div class="item">
               <p class="numb">2.</p>
-              <p class="desc">小组积分为组内选手完成对应任务的分数之和</p>
+              <p class="desc">小组积分为组内选手完成对应任务的分数之和。</p>
             </div>
             <div class="item">
               <p class="numb">3.</p>
@@ -403,7 +363,7 @@ High Performance TiDB Challenge
             </div>
           </div>
 
-          <div class="detail-mobile detail-3">
+          <div class="detail detail-js detail-3">
             <div class="item">
               <p class="numb">1.</p>
               <p class="desc">每个小组最多一名顾问，一位顾问最多指导一个小组。</p>
