--- a/src/less/community/high-performance-tidb-challenge.less
+++ b/src/less/community/high-performance-tidb-challenge.less
@@ -321,7 +321,7 @@ section {
             line-height: 1.7;
 
             a {
-                color: @C3;
+                color: @C2;
             }
         }
 
@@ -741,13 +741,8 @@ section {
                     width: 36px;
                     height: 30px;
                 }
-
-                &:hover .detail {
-                    display: block;
-                }
             }
 
-            .detail-mobile,
             .detail {
                 display: none;
                 position: absolute;
@@ -765,6 +760,10 @@ section {
 
                 p {
                     display: inline;
+                }
+
+                a {
+                    color: @C2;
                 }
 
                 .item {
@@ -786,13 +785,8 @@ section {
                 }
             }
 
-            .detail-1 {
-                display: block;
-            }
-
             .detail-mobile {
                 position: relative;
-                display: none;
                 right: 0;
                 width: 100%;
                 background: transparent;
