--- a/layouts/partials/layout/mobile-sidebar-cn.html
+++ b/layouts/partials/layout/mobile-sidebar-cn.html
@@ -25,7 +25,7 @@
         <li><a href="https://asktug.com" target="_blank"
             onclick="trackViews('navbar-asktug', 'asktug_view')">问答</a></li>
         <li {{ if eq $nav_active "download"}}class="sel"{{end}}><a href="/download-cn">下载试用</a></li>
-        <li><a class="link-download" href="mailto:info@pingcap.com" target="_blank"
+        <li><a class="link-download" href="/zh/contact-us/" target="_blank"
             onclick="trackViews('navbar-contact-us', 'mail_to_info_view')">联系我们</a></li>
         <li><a href="https://university.pingcap.com/"
             onclick="trackViews('navbar-university', 'pingcap-university_view')" target="_blank"
