--- a/layouts/solutions/intel.html
+++ b/layouts/solutions/intel.html
@@ -77,7 +77,7 @@
                     </div>
                 {{- end -}}
             </div>
-            <a href="mailto:info@pingcap.com" target="_blank"
+            <a href="/zh/contact-us/" target="_blank"
             onclick="trackViews('intel-solution-contact-us', 'mail_to_info_view')"><button class="contact-us-btn">联系我们</button></a>
         </div>
     </section>
