chore: update community orignization data fech method

--- a/src/less/community/organization-cn.less
+++ b/src/less/community/organization-cn.less
@@ -452,7 +452,6 @@ button.branchBtn.userBtn.orgBtn.tr {
       top: 50%;
       transform: translateY(-50%);
       left: 15%;
-      width: 40%;
     }
 
     .name-en {
@@ -479,6 +478,11 @@ button.branchBtn.userBtn.orgBtn.tr {
     .githubID {
       padding: 13px;
     }
+  }
+
+  .contributor-info-cn {
+    justify-content: space-around;
+    align-items: center;
   }
 
   .contributor-item {
@@ -1031,7 +1035,7 @@ button.branchBtn.userBtn.orgBtn.tr {
       align-items: center;
       width: 33.33333%;
       height: 200px;
-      
+
       &:hover {
         .card {
           opacity: 0;
