--- a/src/less/community/organization-cn.less
+++ b/src/less/community/organization-cn.less
@@ -19,6 +19,8 @@
 @comBtnColor: #956D8F;
 
 .community-organization {
+  min-height: 80vh;
+
   .container {
     max-width: 1124px;
   }
@@ -447,11 +449,21 @@ button.branchBtn.userBtn.orgBtn.tr {
       box-shadow: 0 2px 5px #c4c4c4;
     }
 
-    .name {
+    .name,
+    .github-link,
+    .slack-link {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
       left: 15%;
+    }
+
+    .github-link {
+      left: 45%;
+    }
+
+    .slack-link {
+      left: 75%;
     }
 
     .name-en {
@@ -539,6 +551,31 @@ button.branchBtn.userBtn.orgBtn.tr {
       }
     }
   }
+}
+
+.developer-sig {
+  margin-top: calc(~'@{navHeight} + 5rem');
+  padding-bottom: 3rem;
+  background-color: white;
+
+  @media (max-width: 1024px) {
+    margin-top: calc(~'@{navHeight} + 8rem') !important;
+  }
+
+  @media (max-width: 798px) {
+    margin-top: calc(~'@{navHeight} + 5rem') !important;
+  }
+
+  .loader-spinner {
+    text-align: center;
+    background-color: white;
+  }
+}
+
+.back-to-sigs {
+  padding-bottom: 2rem;
+  color: #2977c7;
+  background-color: white;
 }
 
 .tag {
