chore: update sigs content and maintainer

--- a/src/less/community/organization-cn.less
+++ b/src/less/community/organization-cn.less
@@ -399,6 +399,7 @@ button.branchBtn.userBtn.orgBtn.tr {
 
         p {
           margin-left: 2rem;
+          width: max-content;
         }
       }
     }
@@ -576,6 +577,10 @@ button.branchBtn.userBtn.orgBtn.tr {
   padding-bottom: 2rem;
   color: #2977c7;
   background-color: white;
+}
+
+.sig-tag {
+  margin-left: 0 !important;
 }
 
 .tag {
