--- a/layouts/community-cn/organization.html
+++ b/layouts/community-cn/organization.html
@@ -90,39 +90,43 @@ Community Organization
         <div class="member-list">
           <div class="member-type">Maintainer</div>
           <div class="flex-lists members divider">
-            {{- range $idx, $i := .Site.Data.community_organization.developer_members.maintainer -}}
-            <div class="member flex-lists {{if $i.githubID }}member-hover{{ end }}">
-              {{- if $i.githubID -}}
-              <a href="{{ $i.link }}" target="_blank">
-                <img class="lazy avatar" data-original="{{ $i.avatar }}" src="/images/svgs/loader-spinner.svg"
+            {{- range $idx, $i := .Site.Data.community_cn_organization.maintainer.tidb -}}
+            <div class="member flex-lists member-hover">
+              <a href="https://github.com/{{ $i }}" target="_blank">
+                <img class="lazy avatar" data-original="https://github.com/{{ $i }}.png" src="/images/svgs/loader-spinner.svg"
                   alt="avatar" />
               </a>
-              <a href="{{ $i.link}}" target="_blank" class="member-info">
-                <p>{{ $i.name }}{{ if $i.tag }}<span
-                    class="tag-{{ lower (replace $i.tag " " "-") }}">{{ $i.tag }}</span>{{ end }}</p>
-                <p>{{ $i.title }}</p>
+              <a href="https://github.com/{{ $i }}" target="_blank" class="member-info">
+                <p><span class="tag-tidb sig-tag">tidb</span></p>
                 <div class="github-icon">
-                  <p>{{ $i.githubID }}</p>
+                  <p>{{ $i }}</p>
                 </div>
               </a>
-              {{- else -}}
-              <img class="lazy avatar" data-original="{{ $i.avatar }}" src="/images/svgs/loader-spinner.svg"
-                alt="avatar" />
-              <div class="member-info">
-                <p>{{ $i.name }}{{ if $i.tag }}<span
-                    class="tag-{{ lower (replace $i.tag " " "-") }}">{{ $i.tag }}</span>{{ end }}</p>
-                <p>{{ $i.title }}</p>
-              </div>
-              {{- end -}}
+            </div>
+            {{- end -}}
+            {{- range $idx, $i := .Site.Data.community_cn_organization.maintainer.tikv -}}
+            <div class="member flex-lists member-hover">
+              <a href="https://github.com/{{ $i }}" target="_blank">
+                <img class="lazy avatar" data-original="https://github.com/{{ $i }}.png" src="/images/svgs/loader-spinner.svg"
+                  alt="avatar" />
+              </a>
+              <a href="https://github.com/{{ $i }}" target="_blank" class="member-info">
+                <p><span class="tag-tikv sig-tag">tikv</span></p>
+                <div class="github-icon">
+                  <p>{{ $i }}</p>
+                </div>
+              </a>
             </div>
             {{- end -}}
           </div>
 
-          <div class="member-type" id="sigs">SIGs</div>
+          <div class="member-type" id="sigs">特别兴趣小组 SIGs</div>
           <div class="flex-lists divider members contributor">
             {{- range $idx, $i := .Site.Data.community_cn_organization.tikv -}}
             <div class="contributor-info contributor-info-cn member flex-lists">
-              <a href="/developer/sig/{{ $i.sig_name }}" class="name"><p>{{ $i.sig_name }}</p></a>
+              <a href="/developer/sig/{{ $i.sig_name }}" class="name">
+                <p>{{ $i.sig_name }}</p>
+              </a>
               <a href="{{ $i.sig_url }}" target="_blank" class="github-link"><img src="/images/github.svg" /></a>
               <a href="{{ $i.channel }}" target="_blank" class="slack-link"><img src="/images/slack.svg" /></a>
             </div>
